# wasm_crx_parser

./: Cargo.toml  CrxParser.rs  CrxParserDemo.html  LICENSE  README.md  index.html
js/: index.js
src/: lib.rs
