[package]
name = "wasm_crx_parser"
version = "0.1.0"
edition = "2024"
description = "A Chrome Extension (CRX) parser in WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
byteorder = "1.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true